<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/constraintLayout">

    <androidx.cardview.widget.CardView android:layout_width="match_parent"
                                       android:layout_height="wrap_content"
                                       app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                                       app:layout_constraintTop_toTopOf="parent" android:id="@+id/cardView"
                                       android:elevation="@dimen/size_4"
                                       android:layout_marginBottom="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_inner"
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_total_usage"
                    android:paddingBottom="5dp"
                    android:textSize="@dimen/font_25"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_total_vol" android:layout_marginTop="8dp"/>

            <TextView
                    android:text="@string/consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_total_vol"
                    android:paddingBottom="5dp"
                    android:textSize="@dimen/font_15"
                    android:textColor="@android:color/black"
                    app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_end"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"/>

            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.96"/>
            <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_vertical_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.04"/>
            <TextView
                    android:text="@string/year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_label_year"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/font_15"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:text="@string/number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_year"
                    android:textSize="@dimen/font_20"
                    android:padding="5dp"
                    android:textColor="@android:color/black"
                    app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
                    app:layout_constraintTop_toBottomOf="@+id/tv_label_year" android:layout_marginTop="8dp"/>
            <ImageView
                    android:layout_width="@dimen/size_50"
                    android:layout_height="@dimen/size_50"
                    android:id="@+id/iv_down_quarter"
                    android:src="@drawable/ic_trending_down"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_year" android:layout_marginStart="16dp"/>
            <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:background="@color/gray_divider"
                    android:visibility="gone"
                    android:id="@+id/view"
                    tools:ignore="MissingConstraints" tools:layout_editor_absoluteY="34dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>